--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,15 +6,37 @@ on:
       - master
 
 jobs:
-  test:
-    name: Test
+  build:
+    name: Build and Test
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Compile and run tests
+      - name: Build application
         run: |
-          javac -d . src/Clacul/*.java src/Main/*.java test/Test/*.java
-          java -cp .:junit.jar:hamcrest-core.jar org.junit.runner.JUnitCore Calcul.CalculatriceTest
+          # Compile Java files
+          javac -d . Calcul/*.java Clacul/*.java
+
+      - name: Install dependencies
+        run: |
+          # Assuming there are no external dependencies to install
+
+      - name: Run automated tests
+        run: |
+          # Run JUnit tests
+          java -cp .:junit-platform-console-standalone.jar org.junit.platform.console.ConsoleLauncher --class-path . --scan-class-path
+
+  deployment:
+    name: Deployment
+    runs-on: ubuntu-latest
+    needs: [build] # This job depends on the 'build' job
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Deploy to production
+        run: |
+          # Commands to deploy your application to a production environment
