--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Java
         uses: actions/setup-java@v2
         with:
-          java-version: '11' # You can change the version to match your Java version
+          java-version: '11'
 
       - name: Build project
         run: javac -cp .:junit-platform-console-standalone.jar *.java
