--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -11,10 +11,16 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up Java
+      - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
+          distribution: 'adopt'
+          architecture: 'x64'
+          server-id: 'github'
+          server-username: ${{ github.actor }}
+          server-password: ${{ secrets.GITHUB_TOKEN }}
+          overwrite-settings: true
 
       - name: Build project
         run: javac -cp .:junit-platform-console-standalone.jar *.java
