--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,8 +22,10 @@ jobs:
           server-password: ${{ secrets.GITHUB_TOKEN }}
           overwrite-settings: true
 
+     
       - name: Build project
-        run: javac -cp .:junit-platform-console-standalone.jar *.java
+        run: javac -cp .:junit-platform-console-standalone.jar src/*.java
+
 
       - name: Run tests
         run: java -jar junit-platform-console-standalone.jar --class-path . --scan-class-path
