--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Build project
         run: javac -cp .:junit-platform-console-standalone.jar src/*.java
 
+      - name: Search for JAR file
+        run: |
+              find . -name "junit-platform-console-standalone.jar"
 
       - name: Run tests
         run: java -jar junit-platform-console-standalone.jar --class-path . --scan-class-path
