--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,8 +27,8 @@ jobs:
         run: javac -cp .:junit-platform-console-standalone.jar src/*.java
 
       - name: Search for JAR file
-        run: |
-              find . -name "junit-platform-console-standalone.jar"
+  run: dir /s /b junit-platform-console-standalone.jar
+
 
       - name: Run tests
         run: java -jar junit-platform-console-standalone.jar --class-path . --scan-class-path
